--- a/HealthCheck/#scss/scss/style.scss
+++ b/HealthCheck/#scss/scss/style.scss
@@ -1,46 +1,44 @@
-@import "./nullstyle.scss";
+@import "_nullstyle";
 
 @font-face {
-   font-family: 'Muli';
-   src: url('../fonts/Muli-Regular.eot');
-   src: local('☺'), url('../fonts/Muli-Regular.woff') format('woff'), 
-                    url('../fonts/Muli-Regular.ttf') format('truetype'), 
-                    url('../fonts/Muli-Regular.svg') format('svg');
+   font-family: "Muli";
+   src: url("../fonts/Muli-Regular.eot");
+   src: local("☺"), url("../fonts/Muli-Regular.woff") format("woff"),
+      url("../fonts/Muli-Regular.ttf") format("truetype"), url("../fonts/Muli-Regular.svg") format("svg");
    font-weight: 300;
    font-style: normal;
 }
 
 @font-face {
-   font-family: 'Muli';
-   src: url('../fonts/Muli-Bold.eot');
-   src: local('☺'), url('../fonts/Muli-Bold.woff') format('woff'), 
-                    url('../fonts/Muli-Bold.ttf') format('truetype'), 
-                    url('../fonts/Muli-Bold.svg') format('svg');
+   font-family: "Muli";
+   src: url("../fonts/Muli-Bold.eot");
+   src: local("☺"), url("../fonts/Muli-Bold.woff") format("woff"), url("../fonts/Muli-Bold.ttf") format("truetype"),
+      url("../fonts/Muli-Bold.svg") format("svg");
    font-weight: 700;
    font-style: normal;
 }
 
 @font-face {
-   font-family: 'Muli';
-   src: url('../fonts/Muli-ExtraBold.eot');
-   src: local('☺'), url('../fonts/Muli-ExtraBold.woff') format('woff'), 
-                    url('../fonts/Muli-ExtraBold.ttf') format('truetype'), 
-                    url('../fonts/Muli-ExtraBold.svg') format('svg');
+   font-family: "Muli";
+   src: url("../fonts/Muli-ExtraBold.eot");
+   src: local("☺"), url("../fonts/Muli-ExtraBold.woff") format("woff"),
+      url("../fonts/Muli-ExtraBold.ttf") format("truetype"), url("../fonts/Muli-ExtraBold.svg") format("svg");
    font-weight: 800;
    font-style: normal;
 }
 
 @font-face {
-   font-family: 'Muli';
-   src: url('../fonts/Muli-Black.eot');
-   src: local('☺'), url('../fonts/Muli-Black.woff') format('woff'), 
-                    url('../fonts/Muli-Black.ttf') format('truetype'), 
-                    url('../fonts/Muli-Black.svg') format('svg');
+   font-family: "Muli";
+   src: url("../fonts/Muli-Black.eot");
+   src: local("☺"), url("../fonts/Muli-Black.woff") format("woff"), url("../fonts/Muli-Black.ttf") format("truetype"),
+      url("../fonts/Muli-Black.svg") format("svg");
    font-weight: 900;
    font-style: normal;
 }
 
-body {font-family: Muli, Helvetica, Arial, sans-serif;}
+body {
+   font-family: Muli, Helvetica, Arial, sans-serif;
+}
 
 .wrapper {
    display: flex;
@@ -49,9 +47,9 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    // -ms-flex-direction: column;
    height: 100%;
    padding: 100px 20px 0px;
-   &_blue{
-      background: rgb(255,255,255);
-      background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(214,237,242,0.5) 100%);
+   &_blue {
+      background: rgb(255, 255, 255);
+      background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(214, 237, 242, 0.5) 100%);
    }
 }
 
@@ -59,7 +57,6 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    max-width: 1430px;
    margin: 0 auto;
    height: inherit;
-
 }
 
 .title {
@@ -86,7 +83,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    font-weight: 300;
    line-height: 1.5;
    color: #191b1c;
-   @media screen and (max-width: 1195px){
+   @media screen and (max-width: 1195px) {
       max-width: 400px;
    }
    @media screen and (max-width: 768px) {
@@ -97,7 +94,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
 
 .form {
    max-width: 400px;
-   @media screen and (max-width: 768px){
+   @media screen and (max-width: 768px) {
       max-width: 100%;
    }
 }
@@ -114,30 +111,32 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
 
 .input {
    padding: 1px 15px;
-   border: 1px solid #9D9F9F;
+   border: 1px solid #9d9f9f;
    border-radius: 6px;
    width: 100%;
    height: 60px;
    font-size: 18px;
-   color: #272A2F;
+   color: #272a2f;
    &__select {
-      color: #9D9F9F;
+      color: #9d9f9f;
       cursor: pointer;
       & option:not(:disabled) {
-         color: #272A2F;
+         color: #272a2f;
       }
    }
    &:focus {
-      border-color: rgba(0,172,205, 0.75);
+      border-color: rgba(0, 172, 205, 0.75);
    }
    &_error {
       &:invalid {
-         border-color: rgb(254,16,16);
-         & + .label {color: rgb(254,16,16);}
+         border-color: rgb(254, 16, 16);
+         & + .label {
+            color: rgb(254, 16, 16);
+         }
       }
       &:not(:checked) {
          & + p:before {
-            border-color: rgb(254,16,16);
+            border-color: rgb(254, 16, 16);
          }
       }
    }
@@ -151,7 +150,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    line-height: 1.5;
    &_error:not(:checked) {
       & + p:before {
-         border-color: rgb(254,16,16);
+         border-color: rgb(254, 16, 16);
       }
    }
    & input {
@@ -165,7 +164,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
       &:checked {
          & + p:before {
             border-color: #00accd;
-            background-image: url('../img/icon.png');
+            background-image: url("../img/icon.png");
             background-repeat: no-repeat;
             background-size: 70%;
             background-position: center;
@@ -173,7 +172,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
       }
    }
    & p:before {
-      content: '';
+      content: "";
       display: inline-block;
       position: absolute;
       z-index: 2;
@@ -182,7 +181,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
       width: 25px;
       height: 25px;
       background-color: #fff;
-      border: 1px solid #9D9F9F;
+      border: 1px solid #9d9f9f;
       border-radius: 3px;
       @media screen and (max-width: 1196px) {
          top: 3px;
@@ -200,7 +199,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    font-weight: 800;
    color: #fff;
    &_off {
-      background-color: #9FBBC1;
+      background-color: #9fbbc1;
    }
    &_on {
       background-color: #00accd;
@@ -211,7 +210,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
 .text {
    font-size: 14px;
    color: #191b1c;
-   & a{
+   & a {
       color: #00accd;
    }
    @media screen and (max-width: 1196px) {
@@ -227,11 +226,11 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    width: 100%;
    padding: 0 20px;
    background-color: #fff;
-   -webkit-box-shadow: 0px 7px 13px -3px rgba(0,0,0,0.19);
-   -moz-box-shadow: 0px 7px 13px -3px rgba(0,0,0,0.19);
-   box-shadow: 0px 7px 13px -3px rgba(0,0,0,0.19);
+   -webkit-box-shadow: 0px 7px 13px -3px rgba(0, 0, 0, 0.19);
+   -moz-box-shadow: 0px 7px 13px -3px rgba(0, 0, 0, 0.19);
+   box-shadow: 0px 7px 13px -3px rgba(0, 0, 0, 0.19);
 
-   &__body{
+   &__body {
       display: flex;
       justify-content: flex-start;
       align-items: center;
@@ -251,7 +250,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
       @media screen and (max-width: 769px) {
          flex: 0 0 180px;
       }
-      & img{
+      & img {
          display: block;
          max-width: 100%;
       }
@@ -268,14 +267,10 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
          font-weight: 800;
          line-height: 1.15;
          margin-bottom: 20px;
-         @media screen and (max-width: 768px){
+         @media screen and (max-width: 768px) {
             font-size: 40px;
             max-width: 300px;
          }
-      }
-      &_secondary {
-
-
       }
    }
 
@@ -287,20 +282,23 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
          float: none;
          max-width: 560px;
       }
-      @media screen and (max-width: 769px){
+      @media screen and (max-width: 769px) {
          max-width: 100%;
       }
-      & img{
+      & img {
          display: block;
          max-width: 100%;
       }
    }
 
-   &__form {}
+   &__form {
+   }
 
-   &__label {}
+   &__label {
+   }
 
-   &__input-email {}
+   &__input-email {
+   }
 
    &__input-pass {
    }
@@ -338,12 +336,15 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
       }
    }
 
-   &__form {}
-   
+   &__form {
+   }
+
    &__input-email {
       &:invalid:not(:placeholder-shown) {
-         border-color: rgb(254,16,16);
-         & + label {color: rgb(254,16,16);}
+         border-color: rgb(254, 16, 16);
+         & + label {
+            color: rgb(254, 16, 16);
+         }
       }
       &:valid ~ input {
          background-color: #00accd;
@@ -356,8 +357,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    }
 
    &__button {
-      background-color: #9FBBC1;
-      
+      background-color: #9fbbc1;
    }
 }
 
@@ -376,26 +376,26 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
       & form {
          display: grid;
          display: -ms-grid;
-         grid-template: [start] "email f-name country" [row2]
-                        [row2]  "pass l-name code"      [row3]
-                        [row3]  "phone sex checkbox"    [row4]
-                        [row4]  "phone birthday button" [end] 
-                        / minmax(200px, 400px) minmax(200px, 400px) minmax(200px, 400px);
+         grid-template:
+            [start] "email f-name country" [row2]
+            [row2] "pass l-name code" [row3]
+            [row3] "phone sex checkbox" [row4]
+            [row4] "phone birthday button" [end]
+            / minmax(200px, 400px) minmax(200px, 400px) minmax(200px, 400px);
          column-gap: 80px;
-         -ms-column-gap: 80px;
          @media screen and (max-width: 1196px) {
             column-gap: 20px;
-            grid-template: [start]  "email  sex "      [row2]
-                            [row2]  "pass   birthday"   [row3]
-                            [row3]  "phone  country"   [row4]
-                            [row4]  "f-name code"     [row5] 
-                            [row5]  "l-name checkbox" [row6]
-                            [row6]  "l-name button"   [end] / 1fr 1fr;
+            grid-template:
+               [start] "email  sex " [row2]
+               [row2] "pass   birthday" [row3]
+               [row3] "phone  country" [row4]
+               [row4] "f-name code" [row5]
+               [row5] "l-name checkbox" [row6]
+               [row6] "l-name button" [end] / 1fr 1fr;
          }
          @media screen and (max-width: 769px) {
             display: block;
          }
-         -ms-grid-columns: 400px;
       }
    }
 
@@ -413,7 +413,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
    &__input-phone {
       grid-area: phone;
       & input {
-      -moz-appearance:textfield;
+         -moz-appearance: textfield;
       }
       & input::-webkit-outer-spin-button {
          -webkit-appearance: none;
@@ -458,6 +458,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
 
    &__button {
       grid-area: button;
+      -ms-grid-area: button;
       & input {
          margin-bottom: 25px;
       }
@@ -466,13 +467,13 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
 
 .footer {
    display: block;
-   -ms-flex: 0 0 100px;
+   // -ms-flex: 0 0 100px;
    padding: 0 20px;
    font-size: 14px;
    color: #666b6c;
 
    &__border {
-      border-top: 1px solid #9D9F9F;
+      border-top: 1px solid #9d9f9f;
       min-height: 100px;
       padding: 30px 0 0px 0;
    }
@@ -481,7 +482,7 @@ body {font-family: Muli, Helvetica, Arial, sans-serif;}
       display: inline-block;
       margin-bottom: 10px;
 
-      & img{
+      & img {
          max-width: 85%;
          @media screen and (max-width: 769px) {
             max-width: 65%;
